opengl/geometry_shader/procesador/y.output
Gramática

    0 $accept: programa $end

    1 programa: lista_sentencias

    2 lista_sentencias: lista_sentencias sentencia PTOCOMA
    3                 | sentencia PTOCOMA

    4 sentencia: sentencia_declar_valor
    5          | sentencia_declar_fun
    6          | sentencia_plot
    7          | error

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN expresion

    9 $@1: %empty

   10 $@2: %empty

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

   12 sentencia_plot: sentencia_plot COMA IDENT
   13               | PLOT IDENT

   14 expresion: PAR_IZQ expresion PAR_DER
   15          | IF expresion THEN expresion ELSE expresion
   16          | expresion COR_IZQ expresion COR_DER
   17          | llamada_funcion
   18          | OP_MENOS expresion
   19          | OP_NEG expresion
   20          | expresion OP_SUMA expresion
   21          | expresion OP_MENOS expresion
   22          | expresion OP_MULTIP expresion
   23          | expresion OP_IGUAL expresion
   24          | expresion OP_COMP expresion
   25          | expresion OP_OR expresion
   26          | expresion OP_AND expresion
   27          | IDENT
   28          | constante
   29          | error

   30 llamada_funcion: IDENT PAR_IZQ lista_expresiones PAR_DER

   31 lista_expresiones: lista_expresiones COMA expresion
   32                  | expresion

   33 lista_param: lista_param COMA lista_ident DOSPTOS IDENT
   34            | lista_ident DOSPTOS IDENT

   35 lista_ident: lista_ident COMA IDENT
   36            | IDENT

   37 constante: CONST_BOOL
   38          | CONST_ENTERO
   39          | CONST_REAL


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 7 29
    PAR_IZQ (258) 11 14 30
    PAR_DER (259) 11 14 30
    ASIGN (260) 8 11
    COMA (261) 12 31 33 35
    PTOCOMA (262) 2 3
    DOSPTOS (263) 8 11 33 34
    IF (264) 15
    THEN (265) 15
    ELSE (266) 15
    PLOT (267) 13
    IDENT (268) 8 11 12 13 27 30 33 34 35 36
    CONST_ENTERO (269) 38
    CONST_BOOL (270) 37
    CONST_REAL (271) 39
    OP_OR (272) 25
    OP_AND (273) 26
    OP_IGUAL (274) 23
    OP_COMP (275) 24
    OP_SUMA (276) 20
    OP_MENOS (277) 18 21
    OP_MULTIP (278) 22
    OP_NEG (279) 19
    COR_IZQ (280) 16
    COR_DER (281) 16


No terminales con las reglas donde aparecen

    $accept (27)
        on left: 0
    programa (28)
        on left: 1
        on right: 0
    lista_sentencias (29)
        on left: 2 3
        on right: 1 2
    sentencia (30)
        on left: 4 5 6 7
        on right: 2 3
    sentencia_declar_valor (31)
        on left: 8
        on right: 4
    sentencia_declar_fun (32)
        on left: 11
        on right: 5
    $@1 (33)
        on left: 9
        on right: 11
    $@2 (34)
        on left: 10
        on right: 11
    sentencia_plot (35)
        on left: 12 13
        on right: 6 12
    expresion (36)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 8 11 14 15 16 18 19 20 21 22 23 24 25 26 31 32
    llamada_funcion (37)
        on left: 30
        on right: 17
    lista_expresiones (38)
        on left: 31 32
        on right: 30 31
    lista_param (39)
        on left: 33 34
        on right: 11 33
    lista_ident (40)
        on left: 35 36
        on right: 33 34 35
    constante (41)
        on left: 37 38 39
        on right: 28


Estado 0

    0 $accept: . programa $end

    error  desplazar e ir al estado 1
    PLOT   desplazar e ir al estado 2
    IDENT  desplazar e ir al estado 3

    programa                ir al estado 4
    lista_sentencias        ir al estado 5
    sentencia               ir al estado 6
    sentencia_declar_valor  ir al estado 7
    sentencia_declar_fun    ir al estado 8
    sentencia_plot          ir al estado 9


Estado 1

    7 sentencia: error .

    $default  reduce usando la regla 7 (sentencia)


Estado 2

   13 sentencia_plot: PLOT . IDENT

    IDENT  desplazar e ir al estado 10


Estado 3

    8 sentencia_declar_valor: IDENT . DOSPTOS IDENT ASIGN expresion
   11 sentencia_declar_fun: IDENT . $@1 PAR_IZQ lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

    DOSPTOS  desplazar e ir al estado 11

    $default  reduce usando la regla 9 ($@1)

    $@1  ir al estado 12


Estado 4

    0 $accept: programa . $end

    $end  desplazar e ir al estado 13


Estado 5

    1 programa: lista_sentencias .
    2 lista_sentencias: lista_sentencias . sentencia PTOCOMA

    error  desplazar e ir al estado 1
    PLOT   desplazar e ir al estado 2
    IDENT  desplazar e ir al estado 3

    $end  reduce usando la regla 1 (programa)

    sentencia               ir al estado 14
    sentencia_declar_valor  ir al estado 7
    sentencia_declar_fun    ir al estado 8
    sentencia_plot          ir al estado 9


Estado 6

    3 lista_sentencias: sentencia . PTOCOMA

    PTOCOMA  desplazar e ir al estado 15


Estado 7

    4 sentencia: sentencia_declar_valor .

    $default  reduce usando la regla 4 (sentencia)


Estado 8

    5 sentencia: sentencia_declar_fun .

    $default  reduce usando la regla 5 (sentencia)


Estado 9

    6 sentencia: sentencia_plot .
   12 sentencia_plot: sentencia_plot . COMA IDENT

    COMA  desplazar e ir al estado 16

    $default  reduce usando la regla 6 (sentencia)


Estado 10

   13 sentencia_plot: PLOT IDENT .

    $default  reduce usando la regla 13 (sentencia_plot)


Estado 11

    8 sentencia_declar_valor: IDENT DOSPTOS . IDENT ASIGN expresion

    IDENT  desplazar e ir al estado 17


Estado 12

   11 sentencia_declar_fun: IDENT $@1 . PAR_IZQ lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

    PAR_IZQ  desplazar e ir al estado 18


Estado 13

    0 $accept: programa $end .

    $default  aceptar


Estado 14

    2 lista_sentencias: lista_sentencias sentencia . PTOCOMA

    PTOCOMA  desplazar e ir al estado 19


Estado 15

    3 lista_sentencias: sentencia PTOCOMA .

    $default  reduce usando la regla 3 (lista_sentencias)


Estado 16

   12 sentencia_plot: sentencia_plot COMA . IDENT

    IDENT  desplazar e ir al estado 20


Estado 17

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT . ASIGN expresion

    ASIGN  desplazar e ir al estado 21


Estado 18

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ . lista_param PAR_DER DOSPTOS IDENT $@2 ASIGN expresion

    IDENT  desplazar e ir al estado 22

    lista_param  ir al estado 23
    lista_ident  ir al estado 24


Estado 19

    2 lista_sentencias: lista_sentencias sentencia PTOCOMA .

    $default  reduce usando la regla 2 (lista_sentencias)


Estado 20

   12 sentencia_plot: sentencia_plot COMA IDENT .

    $default  reduce usando la regla 12 (sentencia_plot)


Estado 21

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 34
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 22

   36 lista_ident: IDENT .

    $default  reduce usando la regla 36 (lista_ident)


Estado 23

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param . PAR_DER DOSPTOS IDENT $@2 ASIGN expresion
   33 lista_param: lista_param . COMA lista_ident DOSPTOS IDENT

    PAR_DER  desplazar e ir al estado 37
    COMA     desplazar e ir al estado 38


Estado 24

   34 lista_param: lista_ident . DOSPTOS IDENT
   35 lista_ident: lista_ident . COMA IDENT

    COMA     desplazar e ir al estado 39
    DOSPTOS  desplazar e ir al estado 40


Estado 25

   29 expresion: error .

    $default  reduce usando la regla 29 (expresion)


Estado 26

   14 expresion: PAR_IZQ . expresion PAR_DER

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 41
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 27

   15 expresion: IF . expresion THEN expresion ELSE expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 42
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 28

   27 expresion: IDENT .
   30 llamada_funcion: IDENT . PAR_IZQ lista_expresiones PAR_DER

    PAR_IZQ  desplazar e ir al estado 43

    $default  reduce usando la regla 27 (expresion)


Estado 29

   38 constante: CONST_ENTERO .

    $default  reduce usando la regla 38 (constante)


Estado 30

   37 constante: CONST_BOOL .

    $default  reduce usando la regla 37 (constante)


Estado 31

   39 constante: CONST_REAL .

    $default  reduce usando la regla 39 (constante)


Estado 32

   18 expresion: OP_MENOS . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 44
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 33

   19 expresion: OP_NEG . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 45
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 34

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN expresion .
   16 expresion: expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    OP_OR      desplazar e ir al estado 46
    OP_AND     desplazar e ir al estado 47
    OP_IGUAL   desplazar e ir al estado 48
    OP_COMP    desplazar e ir al estado 49
    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 8 (sentencia_declar_valor)


Estado 35

   17 expresion: llamada_funcion .

    $default  reduce usando la regla 17 (expresion)


Estado 36

   28 expresion: constante .

    $default  reduce usando la regla 28 (expresion)


Estado 37

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param PAR_DER . DOSPTOS IDENT $@2 ASIGN expresion

    DOSPTOS  desplazar e ir al estado 54


Estado 38

   33 lista_param: lista_param COMA . lista_ident DOSPTOS IDENT

    IDENT  desplazar e ir al estado 22

    lista_ident  ir al estado 55


Estado 39

   35 lista_ident: lista_ident COMA . IDENT

    IDENT  desplazar e ir al estado 56


Estado 40

   34 lista_param: lista_ident DOSPTOS . IDENT

    IDENT  desplazar e ir al estado 57


Estado 41

   14 expresion: PAR_IZQ expresion . PAR_DER
   16          | expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    PAR_DER    desplazar e ir al estado 58
    OP_OR      desplazar e ir al estado 46
    OP_AND     desplazar e ir al estado 47
    OP_IGUAL   desplazar e ir al estado 48
    OP_COMP    desplazar e ir al estado 49
    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53


Estado 42

   15 expresion: IF expresion . THEN expresion ELSE expresion
   16          | expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    THEN       desplazar e ir al estado 59
    OP_OR      desplazar e ir al estado 46
    OP_AND     desplazar e ir al estado 47
    OP_IGUAL   desplazar e ir al estado 48
    OP_COMP    desplazar e ir al estado 49
    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53


Estado 43

   30 llamada_funcion: IDENT PAR_IZQ . lista_expresiones PAR_DER

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion          ir al estado 60
    llamada_funcion    ir al estado 35
    lista_expresiones  ir al estado 61
    constante          ir al estado 36


Estado 44

   16 expresion: expresion . COR_IZQ expresion COR_DER
   18          | OP_MENOS expresion .
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 18 (expresion)


Estado 45

   16 expresion: expresion . COR_IZQ expresion COR_DER
   19          | OP_NEG expresion .
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    COR_IZQ  desplazar e ir al estado 53

    $default  reduce usando la regla 19 (expresion)


Estado 46

   25 expresion: expresion OP_OR . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 62
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 47

   26 expresion: expresion OP_AND . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 63
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 48

   23 expresion: expresion OP_IGUAL . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 64
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 49

   24 expresion: expresion OP_COMP . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 65
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 50

   20 expresion: expresion OP_SUMA . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 66
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 51

   21 expresion: expresion OP_MENOS . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 67
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 52

   22 expresion: expresion OP_MULTIP . expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 68
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 53

   16 expresion: expresion COR_IZQ . expresion COR_DER

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 69
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 54

   11 sentencia_declar_fun: IDENT $@1 PAR_IZQ lista_param PAR_DER DOSPTOS . IDENT $@2 ASIGN expresion

    IDENT  desplazar e ir al estado 70


Estado 55

   33 lista_param: lista_param COMA lista_ident . DOSPTOS IDENT
   35 lista_ident: lista_ident . COMA IDENT

    COMA     desplazar e ir al estado 39
    DOSPTOS  desplazar e ir al estado 71


Estado 56

   35 lista_ident: lista_ident COMA IDENT .

    $default  reduce usando la regla 35 (lista_ident)


Estado 57

   34 lista_param: lista_ident DOSPTOS IDENT .

    $default  reduce usando la regla 34 (lista_param)


Estado 58

   14 expresion: PAR_IZQ expresion PAR_DER .

    $default  reduce usando la regla 14 (expresion)


Estado 59

   15 expresion: IF expresion THEN . expresion ELSE expresion

    error         desplazar e ir al estado 25
    PAR_IZQ       desplazar e ir al estado 26
    IF            desplazar e ir al estado 27
    IDENT         desplazar e ir al estado 28
    CONST_ENTERO  desplazar e ir al estado 29
    CONST_BOOL    desplazar e ir al estado 30
    CONST_REAL    desplazar e ir al estado 31
    OP_MENOS      desplazar e ir al estado 32
    OP_NEG        desplazar e ir al estado 33

    expresion        ir al estado 72
    llamada_funcion  ir al estado 35
    constante        ir al estado 36


Estado 60

   16 expresion: expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion
   32 lista_expresiones: expresion .

    OP_OR      desplazar e ir al estado 46
    OP_AND     desplazar e ir al estado 47
    OP_IGUAL   desplazar e ir al estado 48
    OP_COMP    desplazar e ir al estado 49
    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 32 (lista_expresiones)


Estado 61

   30 llamada_funcion: IDENT PAR_IZQ lista_expresiones . PAR_DER
   31 lista_expresiones: lista_expresiones . COMA expresion

    PAR_DER  desplazar e ir al estado 73
    COMA     desplazar e ir al estado 74


Estado 62

   16 expresion: expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   25          | expresion OP_OR expresion .
   26          | expresion . OP_AND expresion

    OP_AND     desplazar e ir al estado 47
    OP_IGUAL   desplazar e ir al estado 48
    OP_COMP    desplazar e ir al estado 49
    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 25 (expresion)


Estado 63

   16 expresion: expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion
   26          | expresion OP_AND expresion .

    OP_IGUAL   desplazar e ir al estado 48
    OP_COMP    desplazar e ir al estado 49
    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 26 (expresion)


Estado 64

   16 expresion: expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   23          | expresion OP_IGUAL expresion .
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    OP_COMP    desplazar e ir al estado 49
    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 23 (expresion)


Estado 65

   16 expresion: expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   24          | expresion OP_COMP expresion .
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    OP_SUMA    desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 24 (expresion)


Estado 66

   16 expresion: expresion . COR_IZQ expresion COR_DER
   20          | expresion . OP_SUMA expresion
   20          | expresion OP_SUMA expresion .
   21          | expresion . OP_MENOS expresion
   22          | expresion . OP_MULTIP expresion
   23          | expresion . OP_IGUAL expresion
   24          | expresion . OP_COMP expresion
   25          | expresion . OP_OR expresion
   26          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 52
    COR_IZQ    desplazar e ir al estado 53

    $default  reduce usando la regla 20 (expresion)


Estado 67
